# app/Http/Controllers/Api/NoteTagController.php
@@ -12,6 +12,167 @@ use App\Models\Tag;
 use Illuminate\Http\Request;
 use App\Models\Note;
 
+
+/**
+ * @OA\Get(
+ *     path="/api/notetag",
+ *     summary="Вывод всех связей",
+ *     tags={"Notetag"},
+ *     @OA\Response(
+ *         response=200,
+ *         description="Ok",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="data", type="array",
+ *                 @OA\Items(
+ *                     @OA\Property(property="note_id", type="integer", example=8),
+ *                     @OA\Property(property="tag_id", type="integer", example=6),
+ *                 )
+ *             )
+ *         )
+ *     )
+ * ),
+ *
+ * @OA\Get(
+ *     path="/api/notetag/{id}",
+ *     summary="Вывод связи по id",
+ *     tags={"Notetag"},
+ *     @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         description="ID заметки",
+ *         required=true,
+ *         @OA\Schema(type="integer")
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Ok",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="data", type="array",
+ *                 @OA\Items(
+ *                     @OA\Property(property="note_id", type="integer", example=8),
+ *                     @OA\Property(property="tag_id", type="integer", example=6),
+ *                 )
+ *             )
+ *         )
+ *     )
+ * ),
+ *
+ * @OA\Get(
+ *     path="/api/notetag/tags/{note_id}",
+ *     summary="Вывод всех тегов заметки",
+ *     tags={"Notetag"},
+ *     @OA\Parameter(
+ *         name="note_id",
+ *         in="path",
+ *         description="ID заметки",
+ *         required=true,
+ *         @OA\Schema(type="integer")
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Ok",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="data", type="array",
+ *                 @OA\Items(
+ *                     @OA\Property(property="id", type="integer", example=6),
+ *                     @OA\Property(property="name", type="string", example="ipsum"),
+ *                     @OA\Property(property="created_at", type="string", format="date-time", example="2025-04-01T14:31:56.000000Z"),
+ *                 )
+ *             )
+ *         )
+ *     )
+ * ),
+ *
+ * @OA\Get(
+ *     path="/api/notetag/notes/{tag_id}",
+ *     summary="Вывод всех заметок связанных с этим тегом",
+ *     tags={"Notetag"},
+ *     @OA\Parameter(
+ *         name="tag_id",
+ *         in="path",
+ *         description="ID тега",
+ *         required=true,
+ *         @OA\Schema(type="integer")
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Ok",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="data", type="array",
+ *                 @OA\Items(
+ *                     @OA\Property(property="id", type="integer", example=4),
+ *                     @OA\Property(property="title", type="string", example="itaque"),
+ *                     @OA\Property(property="content", type="string", example="Quaerat quisquam ipsa amet maxime. Dolor quasi autem temporibus et sint eveniet sit natus. Incidunt sit odio accusantium assumenda eos. Et iste sit quo voluptatem officiis."),
+ *                     @OA\Property(property="user_id", type="integer", example=5),
+ *                     @OA\Property(property="created_at", type="string", format="date-time", example="2025-04-01T14:31:56.000000Z"),
+ *                 )
+ *             )
+ *         )
+ *     )
+ * ),
+ *
+ *
+ *
+ *
+ * @OA\Delete(
+ *     path="/api/notetag/{id}",
+ *     summary="Удаление связи",
+ *     tags={"Notetag"},
+ *     @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         description="ID связи",
+ *         required=true,
+ *         @OA\Schema(type="integer")
+ *     ),
+ *     @OA\Response(
+ *         response=204,
+ *         description="Успешное удаление (нет содержимого)"
+ *     ),
+ *     @OA\Response(
+ *         response=404,
+ *         description="Связи не найдена",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="message", type="string", example="Note not found")
+ *         )
+ *     )
+ * )
+ *
+ * @OA\Post(
+ *       path="/api/notetag",
+ *       summary="Создание заметки",
+ *       tags={"Notetag"},
+ *
+ *       @OA\RequestBody(
+ *           required=true,
+ *           @OA\JsonContent(
+ *               required={"note_id", "tag_id"},
+ *               @OA\Property(property="note_id", type="integer", example=2),
+ *               @OA\Property(property="tag_id", type="integer", example=6),
+ *           )
+ *       ),
+ *
+ *       @OA\Response(
+ *           response=201,
+ *           description="Created",
+ *           @OA\JsonContent(
+ *               @OA\Property(property="data", type="object",
+ *                   @OA\Property(property="note_id", type="integer", example=2),
+ *                   @OA\Property(property="tag_id", type="string", example=6),
+ *               )
+ *           )
+ *       ),
+ *       @OA\Response(
+ *           response=422,
+ *           description="Unprocessable Entity",
+ *           @OA\JsonContent(
+ *               @OA\Property(property="message", type="string", example="The given data was invalid."),
+ *               @OA\Property(property="errors", type="object")
+ *           )
+ *       )
+ *  )
+ */
+
 class NoteTagController extends Controller
 {
     /**
@@ -37,15 +198,15 @@ class NoteTagController extends Controller
         return Note_TagResource::collection($noteTags);
     }
 
-    public function shownotes(int $tag_id)
+    public function shownotes(int $tag_id) //Выводит все теги заметки
     {
-        $tag = Tag::with('note')->findOrFail($tag_id); // Используйте полное пространство имен
+        $tag = Tag::with('note')->findOrFail($tag_id);
         return NoteResource::collection($tag->note);
     }
 
-    public function showtags(int $note_id)
+    public function showtags(int $note_id) //Выводит все заметки с этим тегом
     {
-        $note = Note::with('tag')->findOrFail($note_id); // Используйте полное пространство имен
+        $note = Note::with('tag')->findOrFail($note_id);
         return TagResource::collection($note->tag);
     }
     /**
